syntax = "proto3";

package order;

option go_package = "github.com/ramiroschettino/Go-Market-Microservices/orders-service/proto/orderpb";

message Order {
    int64 id = 1;
    int64 product_id = 2;
    int32 quantity = 3;
    double total_price = 4;
}


message CreateOrderRequest {
  int64 product_id = 1;
  int32 quantity = 2;
  string product_name = 3;
  string product_description = 4;
  double product_price = 5;
}

message CreateOrderResponse {
    Order order = 1;
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}
